CONNECTORS-931: Cleanup charset handling for Java 7
git-svn-id: https://svn.apache.org/repos/asf/manifoldcf/trunk@1588386 13f79535-47bb-0310-9956-ffa450edef68